disgarded the fix for build distortion

--- a/css/background.css
+++ b/css/background.css
@@ -18,7 +18,7 @@ img.bg {
 
 @media screen and (max-width: 1024px) { /* Specific to this particular image */
     img.bg {
-        left: 40%;
-        margin-left: -410px;   /* 50% */
+        left: 50%;
+        margin-left: -512px;   /* 50% */
     }
 }
